--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
+    "start": "webpack-dev-server --open --mode development",
+    "node": "webpack --config webpack.config.server.js -w & nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +32,9 @@
   "homepage": "https://github.com/BrittanyZzz/sluggish-funicular#readme",
   "dependencies": {
     "axios": "^1.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
@@ -36,11 +44,14 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.19.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-server": "^3.7.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
