--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
-    "node": "webpack --config webpack.config.server.js -w & nodemon server.js"
+    "node": "webpack --config webpack.config.server.js -w & nodemon ./dist/server.js"
   },
   "repository": {
     "type": "git",
